# wallpaper-picker

./: Cargo.toml  GUIDE.md  LICENSE  Makefile  README.md
.github/workflows/: release.yaml
service/: wallpaper-picker.service
src/: main.rs
